# xIaoShuo

./: .codex-change022.bundle  .dockerignore  .env.docker  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DATABASE_SETUP.md  Dockerfile  Harness架构设计.md  Makefile  README.md  REVIEW_CHECKLIST.md  REVIEW_v2.md  alembic.ini  change-017-guide.html  deploy-guide.html  deploy.sh  docker-compose.yml  example_usage.py  example_with_logging.py  nginx.conf  output_novel-example-001.txt  pyproject.toml  review-report.html  run_api.py  test_api.py  test_api_client.py  test_api_integration.py  test_e2e_integration.py  test_proxy_local.py  test_proxy_output2.txt  verify_deployment.py  修改.md  全流程使用指南.html  需求分析.md
.claude/: settings.json
.claude/hooks/: gate1-design-approved.ps1  gate1-design-approved.sh  gate2-delivery-approved.ps1  gate2-delivery-approved.sh  (+1 more)
.harness/: README.md  requirements.md  state.json  tasks.md  搭建流程.html  流程图.html
alembic/: env.py
archive/: README.md  baseline.json  index.md  manifest.csv  organization-report.md
docs/: DEPLOYMENT.md  harness_subagent_architecture.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
loadtest/: .gitignore  README.md  config.py  generate_seed.py  locustfile.py
scripts/: archive_history.py  backup-db.sh  check_legacy_paths.py  check_secrets.py  deploy.sh  diff_db_models.py  migrate_json_to_db.py  verify_deployment.py
src/: __init__.py
src/api/: main.py  (+1 more)
tests/: conftest.py  test_book_import.py  test_careers.py  test_inspiration.py  test_llm_config_auth.py
(+957 files in other folders)
