[tool.poetry]
name = "xiaoshuo"
version = "0.1.0"
description = "AI 中文网络小说生成平台"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^1.2.0"
langchain-core = "^1.4.0"
langchain-openai = "^1.2.1"
python-dotenv = "^1.2.2"
tenacity = "^9.1.4"
pydantic-settings = "^2.14.1"
langchain = "^1.3.1"
fastapi = "^0.136.1"
uvicorn = {extras = ["standard"], version = "^0.47.0"}
python-multipart = "^0.0.28"
httpx = "^0.28.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
pytest-cov = "^7.1.0"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*", "langgraph.*"]
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
